feat: Update version to 1.1.2 and enhance UI with improved styling

--- a/options/options.html
+++ b/options/options.html
@@ -61,7 +61,6 @@
       }
 
       button {
-        margin-top: 30px;
         width: 100%;
         border: none;
         padding: 14px 0;
@@ -81,7 +80,7 @@
     </style>
   </head>
   <body>
-    <div>
+    <div class="section">
       <h1>GitLab Einstellungen</h1>
       <label for="gitlabToken">Private Access Token:</label>
       <div class="input-wrapper">
@@ -107,7 +106,7 @@
       <button id="save">Speichern</button>
     </div>
 
-    <div>
+    <div class="section">
       <h1>Add-on Optionen</h1>
       <label for="clearCacheBtn">Cache leeren:</label>
       <button id="clearCacheBtn">leeren</button>
