Reorganized file strucutre Bumped version to 2.1.0

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Einstellungen – GitLab Ticket Addon</title>
+    <title>Einstellungen - GitLab Ticket Addon</title>
     <link rel="stylesheet" href="../theme.css" />
     <style>
       body {
