feat: Introduce Enums for message types and cache keys; update related code for consistency

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -159,7 +159,8 @@
     <div class="section">
       <h1>Add-on Optionen</h1>
       <label for="clearCacheBtn">Cache leeren:</label>
-      <button id="clearCacheBtn">leeren</button>
+      <button id="clearCacheBtn">Cache leeren</button>
+      <button id="clearProjectsBtn">Projekte leeren</button>
     </div>
 
     <footer>
@@ -169,16 +170,15 @@
           href="https://www.visionconnect.de"
           target="_blank"
           rel="noopener noreferrer"
-          >VisionConnect GmbH</a
-        >
-        <img
-          src="../../icons/vc-icon-32px.png"
-          alt="VisionConnect Logo"
-          class="footer-icon"
-        />
+          >VisionConnect GmbH
+          <img
+            src="../../icons/vc-icon-32px.png"
+            alt="VisionConnect Logo"
+            class="footer-icon"
+        /></a>
       </p>
     </footer>
 
-    <script src="options.js"></script>
+    <script type="module" src="options.js"></script>
   </body>
 </html>
