--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -111,7 +111,6 @@
     <button id="create">Ticket erstellen</button>
 
     <script src="easymde/easymde.min.js"></script>
-    <script src="../utils/utils.js"></script>
-    <script src="ticket_creator.js"></script>
+    <script type="module" src="ticket_creator.js"></script>
   </body>
 </html>
