feat: Implement assignee loading toggle and enhance caching for user and assignees

--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -103,10 +103,12 @@
         />
         <datalist id="projectSuggestions"></datalist>
       </div>
-      <div class="select-container">
+      <div class="select-container" style="display: none">
         <label for="assigneeSelect">Zuständiger:</label>
         <select id="assigneeSelect">
-          <option value="" disabled selected>Bitte wählen Sie einen Zuständigen</option>
+          <option value="" disabled selected>
+            Bitte wählen Sie einen Zuständigen
+          </option>
         </select>
       </div>
       <div class="select-container">
