--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -1,163 +1,195 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Projekt wählen</title>
-    <link rel="stylesheet" href="../theme.css" />
-    <link rel="stylesheet" href="easymde/easymde.min.css" />
-    <style>
-      body {
-        margin: 20px;
-        padding: 0;
-        min-width: 450px;
-        min-height: 500px;
-        overflow-y: auto;
-      }
 
-      h2 {
-        margin-top: 0;
-        font-size: 20px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <title>Projekt wählen</title>
+  <link rel="stylesheet" href="../theme.css" />
+  <link rel="stylesheet" href="easymde/easymde.min.css" />
+  <style>
+    body {
+      margin:10px;
+      padding: 0;
+      min-width: 650px;
+      min-height: 500px;
+      overflow-y: auto;
+      font-size:1rem;
+    }
 
-      label {
-        display: block;
-        margin-top: 15px;
-        font-weight: bold;
-      }
+    h2 {
+      margin-top: 0;
+      font-size: 1.2rem;
+      margin-left:20px;
+    }
 
-      select,
-      input,
-      button {
-        /* textarea aus dieser Liste entfernt, da EasyMDE es stylt */
-        width: 100%;
-        margin-top: 5px;
-        font-size: 14px;
-        padding: 8px;
-        border-radius: 4px;
-        box-sizing: border-box;
-      }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
 
-      select {
-        height: 50px;
-        overflow-y: auto;
-      }
+    select,
+    input,
+    button {
+      /* textarea aus dieser Liste entfernt, da EasyMDE es stylt */
+      width: 100%;
+      margin-top: 5px;
+      font-size: 14px;
+      padding: 8px;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
 
-      /* Spezifische Styles für den Button, beachte, dass keine 'textarea' mehr hier ist */
-      button {
-        font-weight: bold;
-        border: none;
-        cursor: pointer;
-        margin-top: 20px;
-        transition: background-color 0.2s ease;
-      }
+    select {
+      height: 50px;
+      overflow-y: auto;
+    }
 
-      input[type="checkbox"] {
-        width: auto;
-        margin-right: 10px;
-      }
+    /* Spezifische Styles für den Button, beachte, dass keine 'textarea' mehr hier ist */
+    button {
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.2s ease;
+    }
 
-      input[type="checkbox"] {
-        width: auto;
-        margin-right: 10px;
-      }
+    input[type="checkbox"] {
+      width: auto;
+      margin-right: 10px;
+    }
 
-      .date-range {
-        display: flex;
-        gap: 10px;
-        align-items: flex-start;
-        flex-wrap: wrap; /* mobile-friendly */
-      }
+    input[type="checkbox"] {
+      width: auto;
+      margin-right: 10px;
+    }
 
-      .date-field {
-        flex: 1 1 48%;
-      }
+    .date-range {
+      display: flex;
+      gap: 10px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      /* mobile-friendly */
+    }
 
-      /* Styles für EasyMDE, um es besser in Ihr Design zu integrieren */
-      .CodeMirror,
-      .EasyMDEContainer {
-        border: 1px solid #ccc; /* Einheitlicher Rahmen wie andere Input-Felder */
-        border-radius: 4px;
-      }
-      /* Optional: Anpassung für den Fullscreen-Modus, falls EasyMDE verwendet wird */
-      .CodeMirror-fullscreen {
-        z-index: 99999;
-      }
-      /* Optional: Anpassung für die Toolbar */
-      .editor-toolbar {
-        border: 1px solid #ccc; /* Passender Rahmen für die Toolbar */
-        border-bottom: none; /* Keine doppelte Linie zwischen Toolbar und Editor */
-        border-radius: 4px 4px 0 0; /* Abgerundete Ecken oben */
-      }
-      .editor-toolbar button {
-        /* Setze Button-Styles innerhalb der Toolbar zurück, wenn nötig */
-        width: auto;
-        padding: 6px 10px;
-        margin-top: 0;
-        font-size: 1em;
-        background: none; /* Toolbar-Buttons sind oft transparent */
-        color: inherit;
-      }
-      .editor-toolbar button.active {
-        background-color: #e0e0e0; /* Aktiver Button-Hintergrund */
-      }
-      .editor-toolbar button:hover {
-        background-color: #f0f0f0;
-      }
-    </style>
-  </head>
-  <body>
-    <h2>GitLab-Ticket erstellen</h2>
+    .date-field {
+      flex: 1 1 48%;
+    }
 
-    <div class="section">
-      <div class="select-container">
-        <label for="projectSearch">Projekt auswählen:</label>
-        <input
-          type="text"
-          id="projectSearch"
-          list="projectSuggestions"
-          placeholder="Projektname suchen..."
-        />
-        <datalist id="projectSuggestions"></datalist>
+    /* Styles für EasyMDE, um es besser in Ihr Design zu integrieren */
+    .CodeMirror,
+    .EasyMDEContainer {
+      border: 1px solid #ccc;
+      /* Einheitlicher Rahmen wie andere Input-Felder */
+      border-radius: 4px;
+    }
+
+    /* Optional: Anpassung für den Fullscreen-Modus, falls EasyMDE verwendet wird */
+    .CodeMirror-fullscreen {
+      z-index: 99999;
+    }
+
+    /* Optional: Anpassung für die Toolbar */
+    .editor-toolbar {
+      border: 1px solid #ccc;
+      /* Passender Rahmen für die Toolbar */
+      border-bottom: none;
+      /* Keine doppelte Linie zwischen Toolbar und Editor */
+      border-radius: 4px 4px 0 0;
+      /* Abgerundete Ecken oben */
+    }
+
+    .editor-toolbar button {
+      /* Setze Button-Styles innerhalb der Toolbar zurück, wenn nötig */
+      width: auto;
+      padding: 6px 10px;
+      margin-top: 0;
+      font-size: 1em;
+      background: none;
+      /* Toolbar-Buttons sind oft transparent */
+      color: inherit;
+    }
+
+    .editor-toolbar button.active {
+      background-color: #e0e0e0;
+      /* Aktiver Button-Hintergrund */
+    }
+
+    .editor-toolbar button:hover {
+      background-color: #f0f0f0;
+    }
+
+    .grid {
+      display: grid;
+      grid: auto / 60% 40%;
+    }
+
+    .grid-item {
+      padding: 0 20px;
+    }
+
+    #create{
+      position:fixed;
+      bottom:20px;
+      right:20px;
+      z-index:99;
+      width:auto;
+    }
+  </style>
+</head>
+
+<body>
+  <h2 data-message="localize">__MSG_PopupTitle__</h2>
+  <div class="grid">
+    <div class="grid-item">
+      <div class="section">
+        <div class="select-container">
+          <label for="projectSearch" data-message="localize">__MSG_PopupLabelSelectProject__:</label>
+          <input type="text" id="projectSearch" list="projectSuggestions" placeholder="Projektname suchen..." />
+          <datalist id="projectSuggestions"></datalist>
+        </div>
       </div>
-      <div class="select-container" style="display: none">
-        <label for="assigneeSelect">Zuständiger:</label>
-        <select id="assigneeSelect">
-          <option value="" disabled selected>
-            Bitte wählen Sie einen Zuständigen
-          </option>
-        </select>
-      </div>
-    </div>
-
-    <div class="section">
       <div class="select-container">
-        <label for="issueTitle">Titel des Tickets:</label>
+        <label for="issueTitle" data-message="localize">__MSG_PopupLabelTitleOfProject__:</label>
         <input type="text" id="issueTitle" />
       </div>
 
-      <div class="select-container date-range">
-        <div class="date-field">
-          <label for="issueEnd">Enddatum:</label>
-          <input type="date" id="issueEnd" />
+      <div class="section">
+        <label for="ticketDescription" data-message="localize">__MSG_PopupLabelTicketDescription__:</label>
+        <textarea id="ticketDescription"></textarea>
+      </div>
+      
+    </div>
+    <div class="grid-item">
+      <div class="section">
+        <div class="select-container" style="display: none">
+          <label for="assigneeSelect" data-message="localize">__MSG_PopupLabelAssigneeSelect__:</label>
+          <select id="assigneeSelect">
+            <option value="" disabled selected data-message="localize">
+              __MSG_PopupAssigneeSelectFirstEntry__
+            </option>
+          </select>
         </div>
-      </div>
 
-      <div class="select-container">
-        <label for="attachmentsCheckbox">
-          Email-Anhänge hinzufügen:
-          <input type="checkbox" id="attachmentsCheckbox" />
-        </label>
+        <div class="select-container date-range">
+          <div class="date-field">
+            <label for="issueEnd" data-message="localize">__MSG_PopupLabelIssueEnd__:</label>
+            <input type="date" id="issueEnd" />
+          </div>
+        </div>
+        <div class="select-container">
+        <label for="attachmentsCheckbox" data-message="localize">__MSG_PopupLabelAttachmentsCheckbox__:</label>
+        <input type="checkbox" id="attachmentsCheckbox" />
+      </div>
       </div>
     </div>
+  </div>
 
-    <div class="section">
-      <label for="ticketDescription">Beschreibung:</label>
-      <textarea id="ticketDescription"></textarea>
-    </div>
+  <button id="create" data-message="localize">__MSG_PopupButtonSubmit__</button>
 
-    <button id="create">Ticket erstellen</button>
+  <script src="../../src/popup/logic/localize.js"></script>
+  <script src="easymde/easymde.min.js"></script>
+  <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
+</body>
 
-    <script src="easymde/easymde.min.js"></script>
-    <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
-  </body>
 </html>
