--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -1,195 +1,194 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title data-message="localize">__MSG_PopupTabsTitle__</title>
+    <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="easymde/easymde.min.css" />
+    <style>
+      body {
+        margin: 10px;
+        padding: 0;
+        min-width: 650px;
+        min-height: 500px;
+        overflow-y: auto;
+        font-size: 1rem;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Projekt wählen</title>
-  <link rel="stylesheet" href="../theme.css" />
-  <link rel="stylesheet" href="easymde/easymde.min.css" />
-  <style>
-    body {
-      margin:10px;
-      padding: 0;
-      min-width: 650px;
-      min-height: 500px;
-      overflow-y: auto;
-      font-size:1rem;
-    }
+      h2 {
+        margin-top: 0;
+        font-size: 1.2rem;
+        margin-left: 20px;
+      }
 
-    h2 {
-      margin-top: 0;
-      font-size: 1.2rem;
-      margin-left:20px;
-    }
+      label {
+        display: block;
+        margin-top: 15px;
+        font-weight: bold;
+      }
 
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
+      select,
+      input,
+      button {
+        width: 100%;
+        margin-top: 5px;
+        font-size: 14px;
+        padding: 8px;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
 
-    select,
-    input,
-    button {
-      /* textarea aus dieser Liste entfernt, da EasyMDE es stylt */
-      width: 100%;
-      margin-top: 5px;
-      font-size: 14px;
-      padding: 8px;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
+      select {
+        height: 50px;
+        overflow-y: auto;
+      }
 
-    select {
-      height: 50px;
-      overflow-y: auto;
-    }
+      button {
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
+        margin-top: 20px;
+        transition: background-color 0.2s ease;
+      }
 
-    /* Spezifische Styles für den Button, beachte, dass keine 'textarea' mehr hier ist */
-    button {
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      margin-top: 20px;
-      transition: background-color 0.2s ease;
-    }
+      input[type="checkbox"] {
+        width: auto;
+        margin-right: 10px;
+      }
 
-    input[type="checkbox"] {
-      width: auto;
-      margin-right: 10px;
-    }
+      .date-range {
+        display: flex;
+        gap: 10px;
+        align-items: flex-start;
+        flex-wrap: wrap;
+      }
 
-    input[type="checkbox"] {
-      width: auto;
-      margin-right: 10px;
-    }
+      .date-field {
+        flex: 1 1 48%;
+      }
 
-    .date-range {
-      display: flex;
-      gap: 10px;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      /* mobile-friendly */
-    }
+      .CodeMirror,
+      .EasyMDEContainer {
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
 
-    .date-field {
-      flex: 1 1 48%;
-    }
+      .CodeMirror-fullscreen {
+        z-index: 99999;
+      }
 
-    /* Styles für EasyMDE, um es besser in Ihr Design zu integrieren */
-    .CodeMirror,
-    .EasyMDEContainer {
-      border: 1px solid #ccc;
-      /* Einheitlicher Rahmen wie andere Input-Felder */
-      border-radius: 4px;
-    }
+      .editor-toolbar {
+        border: 1px solid #ccc;
+        border-bottom: none;
+        border-radius: 4px 4px 0 0;
+      }
 
-    /* Optional: Anpassung für den Fullscreen-Modus, falls EasyMDE verwendet wird */
-    .CodeMirror-fullscreen {
-      z-index: 99999;
-    }
+      .editor-toolbar button {
+        width: auto;
+        padding: 6px 10px;
+        margin-top: 0;
+        font-size: 1em;
+        background: none;
+        color: inherit;
+      }
 
-    /* Optional: Anpassung für die Toolbar */
-    .editor-toolbar {
-      border: 1px solid #ccc;
-      /* Passender Rahmen für die Toolbar */
-      border-bottom: none;
-      /* Keine doppelte Linie zwischen Toolbar und Editor */
-      border-radius: 4px 4px 0 0;
-      /* Abgerundete Ecken oben */
-    }
+      .editor-toolbar button.active {
+        background-color: #e0e0e0;
+      }
 
-    .editor-toolbar button {
-      /* Setze Button-Styles innerhalb der Toolbar zurück, wenn nötig */
-      width: auto;
-      padding: 6px 10px;
-      margin-top: 0;
-      font-size: 1em;
-      background: none;
-      /* Toolbar-Buttons sind oft transparent */
-      color: inherit;
-    }
+      .editor-toolbar button:hover {
+        background-color: #f0f0f0;
+      }
 
-    .editor-toolbar button.active {
-      background-color: #e0e0e0;
-      /* Aktiver Button-Hintergrund */
-    }
+      .grid {
+        display: grid;
+        grid: auto / 60% 40%;
+      }
 
-    .editor-toolbar button:hover {
-      background-color: #f0f0f0;
-    }
+      .grid-item {
+        padding: 0 20px;
+      }
 
-    .grid {
-      display: grid;
-      grid: auto / 60% 40%;
-    }
+      #create {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 99;
+        width: auto;
+      }
+    </style>
+  </head>
 
-    .grid-item {
-      padding: 0 20px;
-    }
-
-    #create{
-      position:fixed;
-      bottom:20px;
-      right:20px;
-      z-index:99;
-      width:auto;
-    }
-  </style>
-</head>
-
-<body>
-  <h2 data-message="localize">__MSG_PopupTitle__</h2>
-  <div class="grid">
-    <div class="grid-item">
-      <div class="section">
-        <div class="select-container">
-          <label for="projectSearch" data-message="localize">__MSG_PopupLabelSelectProject__:</label>
-          <input type="text" id="projectSearch" list="projectSuggestions" placeholder="Projektname suchen..." />
-          <datalist id="projectSuggestions"></datalist>
-        </div>
-      </div>
-      <div class="select-container">
-        <label for="issueTitle" data-message="localize">__MSG_PopupLabelTitleOfProject__:</label>
-        <input type="text" id="issueTitle" />
-      </div>
-
-      <div class="section">
-        <label for="ticketDescription" data-message="localize">__MSG_PopupLabelTicketDescription__:</label>
-        <textarea id="ticketDescription"></textarea>
-      </div>
-      
-    </div>
-    <div class="grid-item">
-      <div class="section">
-        <div class="select-container" style="display: none">
-          <label for="assigneeSelect" data-message="localize">__MSG_PopupLabelAssigneeSelect__:</label>
-          <select id="assigneeSelect">
-            <option value="" disabled selected data-message="localize">
-              __MSG_PopupAssigneeSelectFirstEntry__
-            </option>
-          </select>
-        </div>
-
-        <div class="select-container date-range">
-          <div class="date-field">
-            <label for="issueEnd" data-message="localize">__MSG_PopupLabelIssueEnd__:</label>
-            <input type="date" id="issueEnd" />
+  <body>
+    <h2 data-message="localize">__MSG_PopupTitle__</h2>
+    <div class="grid">
+      <div class="grid-item">
+        <div class="section">
+          <div class="select-container">
+            <label for="projectSearch" data-message="localize">
+              __MSG_PopupLabelSelectProject__:
+            </label>
+            <input
+              type="text"
+              id="projectSearch"
+              list="projectSuggestions"
+              data-i18n-attr="placeholder:PopupPlaceholderSelectProject"
+            />
+            <datalist id="projectSuggestions"></datalist>
           </div>
         </div>
+
         <div class="select-container">
-        <label for="attachmentsCheckbox" data-message="localize">__MSG_PopupLabelAttachmentsCheckbox__:</label>
-        <input type="checkbox" id="attachmentsCheckbox" />
+          <label for="issueTitle" data-message="localize">
+            __MSG_PopupLabelTitleOfProject__:
+          </label>
+          <input type="text" id="issueTitle" />
+        </div>
       </div>
+
+      <div class="grid-item">
+        <div class="section">
+          <div class="select-container" style="display: none">
+            <label for="assigneeSelect" data-message="localize">
+              __MSG_PopupLabelAssigneeSelect__:
+            </label>
+            <select id="assigneeSelect">
+              <option value="" disabled selected data-message="localize">
+                __MSG_PopupAssigneeSelectFirstEntry__
+              </option>
+            </select>
+          </div>
+
+          <div class="select-container date-range">
+            <div class="date-field">
+              <label for="issueEnd" data-message="localize">
+                __MSG_PopupLabelIssueEnd__:
+              </label>
+              <input type="date" id="issueEnd" />
+            </div>
+          </div>
+
+          <div class="select-container">
+            <label for="attachmentsCheckbox" data-message="localize">
+              __MSG_PopupLabelAttachmentsCheckbox__:
+            </label>
+            <input type="checkbox" id="attachmentsCheckbox" />
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="section">
+      <label for="ticketDescription" data-message="localize">
+        __MSG_PopupLabelTicketDescription__:
+      </label>
+      <textarea id="ticketDescription"></textarea>
+    </div>
+    <button id="create" data-message="localize">
+      __MSG_PopupButtonSubmit__
+    </button>
 
-  <button id="create" data-message="localize">__MSG_PopupButtonSubmit__</button>
-
-  <script src="../../src/popup/logic/localize.js"></script>
-  <script src="easymde/easymde.min.js"></script>
-  <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
-</body>
-
+    <script src="../localize.js"></script>
+    <script src="easymde/easymde.min.js"></script>
+    <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
+  </body>
 </html>
