Removed innerHTML assignments with safe alternatives

--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title data-message="localize">__MSG_PopupTabsTitle__</title>
     <link rel="stylesheet" href="../theme.css" />
-    <link rel="stylesheet" href="easymde/easymde.min.css" />
+    <link rel="stylesheet" href="../libs/easymde/easymde.min.css" />
     <style>
       body {
         margin: 10px;
@@ -188,7 +188,7 @@
     </button>
 
     <script src="../localize.js"></script>
-    <script src="easymde/easymde.min.js"></script>
+    <script src="../libs/easymde/easymde.min.js"></script>
     <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
   </body>
 </html>
