Update README, improve error messages, and enhance options handling - Added error messages for invalid and unreachable GitLab URLs in localization files. - Refactored options handling to check URL reachability before saving. - Changed script tags to type="module" in HTML files for better compatibility. - Created VENDORS.md to document third-party libraries used in the add-on.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -204,7 +204,7 @@
       </p>
     </footer>
 
-    <script src="../localize.js"></script>
+    <script type="module" src="../localize.js"></script>
     <script type="module" src="../../dist/bundled-options.js"></script>
   </body>
 </html>
