--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -187,7 +187,7 @@
       __MSG_PopupButtonSubmit__
     </button>
 
-    <script src="../localize.js"></script>
+    <script type="module" src="../localize.js"></script>
     <script src="../libs/easymde/easymde.min.js"></script>
     <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
   </body>
