Moved easymde to node_modules Fixed Bug with Actionbar button not working Fixed Bug with missing Localization key

--- a/src/popup/ticket_creator.html
+++ b/src/popup/ticket_creator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title data-message="localize">__MSG_PopupTabsTitle__</title>
     <link rel="stylesheet" href="../theme.css" />
-    <link rel="stylesheet" href="../libs/easymde/easymde.min.css" />
+    <link rel="stylesheet" href="../../dist/libs/easymde.min.css" />
     <style>
       body {
         margin: 10px;
@@ -187,7 +187,7 @@
       __MSG_PopupButtonSubmit__
     </button>
 
-    <script src="../libs/easymde/easymde.min.js"></script>
+    <script src="../../dist/libs/easymde.min.js"></script>
     <script type="module" src="../../dist/bundled-ticket_creator.js"></script>
   </body>
 </html>
