--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title data-message="localize">__MSG_OptionsTabsTitle__</title>
+    <title data-message="localize">__MSG_OptionsTabsTitle__ - __MSG_extensionName__</title>
     <link rel="stylesheet" href="../theme.css" />
     <style>
       body {
@@ -113,7 +113,7 @@
   </head>
   <body>
     <div class="section">
-      <h1 data-message="localize">__MSG_OptionsTitle__</h1>
+      <h1 data-message="localize"><span>__MSG_OptionsTitle__</span></h1>
 
       <label for="gitlabUrl" data-message="localize"
         >__MSG_OptionsLabelGitlabURL__:</label
