Refactor localization keys and improve popup handling
- Updated localization keys in messages.json and manifest.json to use consistent casing.
- Enhanced error handling in API calls and popup closure.
- Improved notification display function to utilize localized extension name.
- Cleaned up unnecessary code related to API base URL.

--- a/src/popup/issue_creator.html
+++ b/src/popup/issue_creator.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title data-message="localize">__MSG_PopupTabsTitle__ - __MSG_extensionName__</title>
+    <title data-message="localize">__MSG_PopupTabsTitle__ - __MSG_ExtensionName__</title>
     <link rel="stylesheet" href="../theme.css" />
     <link rel="stylesheet" href="../../dist/libs/easymde.min.css" />
     <style>
