--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title data-message="localize">__MSG_OptionsTabsTitle__ - __MSG_extensionName__</title>
+    <title data-message="localize">__MSG_OptionsTabsTitle__ - __MSG_ExtensionName__</title>
     <link rel="stylesheet" href="../theme.css" />
     <style>
       body {
